[package]
name = "availability-handler"
version = "0.1.0"
authors = ["Aparna Bhaskaran <aparnab@gps.caltech.edu>"]

[dependencies]
clap = "2.32"
mysql = "13.1.0"
oracle = "0.1.1"
chrono = "0.4"
regex = "1"
hostname = "0.1.5"
log = "0.4"
log4rs = { version = "0.8.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
json="0.11.13"
config="0.10.1"

